--- a/style.css
+++ b/style.css
@@ -7,6 +7,67 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+}
+
+p {
+  font-size: 1.25rem;
 }
 
 /* Add styles here! */
+header {
+  background-color: white;
+  border-bottom: 8px solid hsl(0deg, 0%, 40%);
+}
+
+.max-width-wrapper {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.intro-chunk {
+  padding-top: 48px;
+  padding-bottom: 48px;
+  max-width: 400px;
+  padding: 48px 16px;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: 1000;
+  padding-bottom: 24px;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+main {
+  background-color: hsl(0deg, 0%, 60%);
+  padding-top: 40px;
+  height: 100%;
+}
+
+.card {
+  background-color: white;
+  padding: 0px 16px;
+  padding-bottom: 8px;
+  border-top: 8px solid white;
+}
+
+.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 4px solid hsl(45deg, 100%, 40%);
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 32px;
+  padding-right: 24px;
+  max-width: fit-content;
+  margin-left: -32px;
+}
+
+h2 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
